@@ -1,11 +1,11 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.2-3.7
-Date: 2007-09-29
+Version: 0.2-3.8
+Date: 2007-10-13
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
 Imports: proxy
-Suggests: Rstem (>= 0.3-1)
+Suggests: Rgraphviz, Rstem (>= 0.3-1)
 Description: A framework for text mining applications within R.
 License: GPL-2
