@@ -1,3 +1,10 @@
+2007-10-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/termdocmatrix.R (dimnames, colnames, rownames): Wrapper
+	functions for accessing dimension, column, and row names.
+
+	* R/plot.R (plot.TermDocMatrix): Plot correlations between terms.
+
 2007-09-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/removePunctuation.Rd: Added documentation. Function also exported to NAMESPACE.
